Fix h1 breaking the layout on smaller screens

--- a/frontend/css/theme.css
+++ b/frontend/css/theme.css
@@ -65,6 +65,11 @@ h2 + h3 {
         line-height: 28px;
     }
 }
+@media(max-width: 400px){
+    h1 {
+        font-size: 24px;
+    }
+}
 
 body {
     font: 18px/28px Helvetica, "Helvetica Neue", Arial, sans-serif;
